# vision-repair-agent

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  vision_repair_agent_plan.md
docs/corpus/: burn_mark_repair_guide.txt  capacitor_crack_detection.txt  corrosion_treatment_guide.txt  delamination_repair.txt  serial_number_lookup_guide.txt
scripts/: ingest_corpus.py  seed_test_docs.py
src/repair_agent/: config.py
src/repair_agent/agent/: edges.py  graph.py  state.py
src/repair_agent/agent/nodes/: cv_node.py  diagnosis_node.py  ocr_node.py  rag_node.py
src/repair_agent/api/: main.py  schemas.py
src/repair_agent/api/routes/: diagnose.py  health.py
src/repair_agent/db/: connection.py  models.py
src/repair_agent/db/migrations/: env.py
src/repair_agent/db/migrations/versions/: 001_initial_schema.py
src/repair_agent/rag/: ingestor.py  prompts.py  retriever.py
src/repair_agent/tools/: cv_tools.py  ocr_tools.py
tests/: conftest.py
tests/integration/: test_agent_graph.py  test_api.py
tests/unit/: test_cv_node.py  test_ocr_node.py  test_rag_node.py
