[project]
name = "repair-agent"
version = "0.1.0"
description = "Vision-Driven Self-Correcting Repair Agent for hardware diagnostics"
authors = [{name = "Mohamed Afsar Harsath Arif"}]
requires-python = ">=3.11"

dependencies = [
    "langgraph>=0.2",
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "langchain-community>=0.3",
    "langchain-postgres>=0.0.9",
    "langchain-huggingface>=0.1",
    "langchain-text-splitters>=0.3",
    "sentence-transformers>=3.0",
    "openai>=1.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pgvector>=0.3",
    "psycopg[binary]>=3.1",
    "pytesseract>=0.3",
    "opencv-python-headless>=4.9",
    "pillow>=10.3",
    "pydantic-settings>=2.2",
    "python-multipart>=0.0.9",
    "pypdf>=4.2",
    "faiss-cpu>=1.8",
    "tenacity>=8.3",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.9",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
